# local_sns

./: .gitignore  Cargo.toml  README.md  dfx.json
.dfx/local/: network-id
scripts/: add_icp_hotkey.sh  add_sns_hotkey.sh  build.sh  create_icp_neuron.sh  create_sns_neuron.sh  deploy_local_sns.sh  disburse-neuron.sh  disburse_icp_neuron.sh  disburse_neuron.sh  disburse_sns_neuron.sh  get_icp_balance.sh  get_icp_neuron.sh  get_icp_neurons.sh  get_sns_balance.sh  get_sns_neurons.sh  increase_icp_dissolve_delay.sh  increase_sns_dissolve_delay.sh  manage_icp_dissolving.sh  manage_sns_dissolving.sh  menu.sh  mint_and_vote.sh  mint_icp.sh  mint_sns_tokens.sh  set_icp_visibility.sh  start.sh
src/: main.rs
src/core/: commands.rs  data_output.rs  deployment.rs  mod.rs
src/core/declarations/: icp_governance.rs  icp_ledger.rs  mod.rs  sns_governance.rs  sns_ledger.rs  sns_swap.rs  sns_wasm.rs
src/core/ops/: commands.rs  deployment.rs  governance_ops.rs  identity.rs  ledger_ops.rs  mod.rs  sns_governance_ops.rs  snsw_ops.rs
src/core/utils/: constants.rs  data_output.rs  mod.rs
src/init/: mod.rs  sns_config.rs
src/lib/: deployment.rs  mod.rs
src/lib/ops/: governance_ops.rs  swap_ops.rs
